added a new project

--- a/ProtectFilesInDir/ProtectFilesInDir/App.config
+++ b/ProtectFilesInDir/ProtectFilesInDir/App.config
@@ -1,17 +1,29 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="ida:Tenant" value="use your tenant login id" />
-    <add key="ida:ClientId" value= "put the ClientID" />
+    <add key="ida:ClientId" value="put the ClientID" />
     <add key="ida:RedirectUri" value="put the redirect URI used for the authentication" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
     <add key="todo:TodoListBaseAddress" value="https://localhost:44321/" />
     <!--Values for the App Principal Id, Base64Key, and BposTenantId must be added before running the application-->
-    <add key="AppPrincipalId" value="Enter your value"/>
-    <add key="Base64Key" value="Key value"/>
-    <add key="BposTenantId" value="Tenant ID"/>
+    <add key="AppPrincipalId" value="Enter your value" />
+    <add key="Base64Key" value="Key value" />
+    <add key="BposTenantId" value="Tenant ID" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.12.0.827" newVersion="3.12.0.827" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory.Platform" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.12.0.827" newVersion="3.12.0.827" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
