--- a/SelectFileandEncryptForm/SelectFileandEncryptForm/packages.config
+++ b/SelectFileandEncryptForm/SelectFileandEncryptForm/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="0.4.0.1" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.8" targetFramework="net452" />
 </packages>
