--- a/FormFileEncrypt/FormFileEncrypt/FormFileEncrypt.csproj
+++ b/FormFileEncrypt/FormFileEncrypt/FormFileEncrypt.csproj
@@ -55,16 +55,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdalFileEncrypt.cs">
+    <Compile Include="FormFileEncrypt.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdalFileEncrypt.Designer.cs">
-      <DependentUpon>AdalFileEncrypt.cs</DependentUpon>
+    <Compile Include="FormFileEncrypt.Designer.cs">
+      <DependentUpon>FormFileEncrypt.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="AdalFileEncrypt.resx">
-      <DependentUpon>AdalFileEncrypt.cs</DependentUpon>
+    <EmbeddedResource Include="FormFileEncrypt.resx">
+      <DependentUpon>FormFileEncrypt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
