--- a/FormFileEncrypt/FormFileEncrypt/FormFileEncrypt.csproj
+++ b/FormFileEncrypt/FormFileEncrypt/FormFileEncrypt.csproj
@@ -8,8 +8,8 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Adalfileencrypt</RootNamespace>
-    <AssemblyName>Adalfileencrypt</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <AssemblyName>FormFileEncrypt</AssemblyName>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
